# mp

./: CMakeLists.txt  README.md
tasks/avl_tree/include/: alv_tree.hpp
tasks/avl_tree/tests/: test.cpp
tasks/bst/include/: bst.hpp
tasks/bst/tests/: test.cpp
tasks/btree/include/: btree.hpp
tasks/btree/tests/: test.cpp
tasks/code_gray/include/: subsetgen.cpp  subsetgen.hpp
tasks/code_gray/tests/: tests.cpp
tasks/graphs/include/: graphs.cpp  graphs.hpp  pch.hpp
tasks/graphs/tests/: tests.cpp
tasks/hash/include/: hash.hpp
tasks/hash/tests/: test.cpp
tasks/optimal_bst/include/: optimal_bst.hpp
tasks/optimal_bst/tests/: tests.cpp
tasks/patricia_tree/include/: patricia_tree.hpp
tasks/patricia_tree/tests/: test.cpp
tasks/permutations/include/: permutations.cpp  permutations.hpp
tasks/permutations/tests/: test.cpp
tasks/set/include/: set.cpp  set.hpp
tasks/set/tests/: test.cpp
tasks/sort/include/: bst.hpp  pch.hpp  sort.hpp  task3.hpp  task4.hpp  task5.hpp  task6.hpp  task7.hpp  task8.hpp
tasks/sort/tests/: tests.cpp
tasks/substring/include/: substring.cpp  substring.hpp
tasks/substring/tests/: test.cpp
